# EmbeddedHAL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  packages.json
boards/containers/: CMakeLists.txt  driver_container.hpp  driver_holder.hpp  drivers_pack.hpp  usart_container.hpp
generator/: generator.py  (+2 more)
interface/hal/memory/: CMakeLists.txt  eeprom.hpp  flash.hpp  heap.hpp
lib/avr_libstdcpp/: CMakeLists.txt
lib/eul/: CMakeLists.txt
src/: CMakeLists.txt
src/arm/common/gpio/: digital_input_pin.cpp
src/arm/raspberry/raspberry_pico/: CMakeLists.txt
src/arm/raspberry/raspberry_pico/gpio/: raspberry_pico_gpio.hpp
src/arm/raspberry/raspberry_pico/interfaces/: CMakeLists.txt  raspberry_pico_usart.hpp
src/arm/raspberry/raspberry_pico/time/: CMakeLists.txt  raspberry_pico_sleep.cpp
src/arm/raspberry/rpx0xx/: CMakeLists.txt  external_targets.cmake
src/arm/raspberry/rpx0xx/core/: CMakeLists.txt  rpx0xx_core.cpp  rpx0xx_critical_section.cpp  rpx0xx_pll.hpp  rpx0xx_register_manipulator.hpp  rpx0xx_reset.cpp  rpx0xx_reset.hpp
src/arm/raspberry/rpx0xx/gpio/: CMakeLists.txt  rpx0xx_gpio.cpp  rpx0xx_gpio.hpp
src/arm/raspberry/rpx0xx/init/: CMakeLists.txt  vector_table.S
src/arm/raspberry/rpx0xx/interfaces/: CMakeLists.txt  rpx0xx_usart.cpp  rpx0xx_usart.hpp
src/arm/raspberry/rpx0xx/memory/: CMakeLists.txt  rpx0xx_flash.cpp
src/arm/raspberry/rpx0xx/reset/: CMakeLists.txt  rpx0xx_reset.cpp
src/arm/raspberry/rpx0xx/syscalls/: CMakeLists.txt  stubs.cpp
src/arm/raspberry/rpx0xx/time/: CMakeLists.txt  rpx0xx_sleep.cpp
src/arm/stm32/common/: CMakeLists.txt  stm32_assert.c  stm32_pendsv.cpp  stm32_sleep.cpp  stm32_svc.cpp  stm32_systick.cpp  stm32_time.cpp  syscalls.cpp
src/arm/stm32/stm32f10x/: CMakeLists.txt
src/arm/stm32/stm32f10x/core/: backupRegisters_stm32.cpp  core_stm32.cpp  criticalSection_stm32.cpp
src/arm/stm32/stm32f10x/gpio/: stm32f10x_gpio.cpp  stm32f10x_gpio.hpp
src/arm/stm32/stm32f10x/interfaces/: stm32f10x_usart.cpp  stm32f10x_usart.hpp
src/arm/stm32/stm32f10x/memory/: eeprom_stm32.cpp
src/arm/stm32/stm32f10x/time/: rtc_stm32.cpp  sleep_stm32.cpp  stm32_sleep.cpp  time_stm32.cpp  watchdog_stm32.cpp
src/arm/stm32/stm32f1xx/: CMakeLists.txt
src/arm/stm32/stm32f1xx/clock/: stm32f1xx_clock.cpp  stm32f1xx_clock.hpp
src/arm/stm32/stm32f1xx/common/: stm32_assert.c  stm32_sleep.cpp  stm32_time.cpp
src/arm/stm32/stm32f1xx/core/: backupRegisters_stm32.cpp  core_stm32.cpp  criticalSection_stm32.cpp
src/arm/stm32/stm32f1xx/gpio/: stm32f1xx_gpio.cpp  stm32f1xx_gpio.hpp
src/arm/stm32/stm32f1xx/interfaces/: stm32f1xx_i2c.cpp  stm32f1xx_i2c.hpp  stm32f1xx_usart.cpp  stm32f1xx_usart.hpp
src/arm/stm32/stm32f1xx/interfaces/detail/: stm32f1xx_usart_traits.hpp
src/arm/stm32/stm32f1xx/memory/: eeprom_stm32.cpp
src/arm/stm32/stm32f1xx/peripherals/: gpio.hpp
src/arm/stm32/stm32f1xx/time/: rtc_stm32.cpp  watchdog_stm32.cpp
src/arm/stm32/stm32f1xx/utils/: assert_stm32.cpp
src/arm/stm32/stm32f4xx/: CMakeLists.txt
src/arm/stm32/stm32f4xx/clock/: stm32f4xx_clock.cpp  stm32f4xx_clock.hpp
src/arm/stm32/stm32f4xx/core/: CMakeLists.txt  stm32f4xx_clock.cpp  stm32f4xx_critical_section.cpp
src/arm/stm32/stm32f4xx/gpio/: stm32f4xx_gpio.cpp  stm32f4xx_gpio.hpp
src/arm/stm32/stm32f4xx/interfaces/: stm32f4xx_i2c.hpp  stm32f4xx_usart.cpp  stm32f4xx_usart.hpp
src/arm/stm32/stm32f4xx/interfaces/detail/: stm32f4xx_usart_traits.hpp
src/arm/stm32/stm32f4xx/interrupts/: CMakeLists.txt  stm32f4xx_pendsv.cpp  stm32f4xx_svc.cpp  stm32f4xx_systick.cpp
src/arm/stm32/stm32f4xx/time/: CMakeLists.txt  stm32f4xx_time.cpp
src/avr/: CMakeLists.txt
src/avr/attiny85/gpio/: ports.hpp
src/avr/common/: CMakeLists.txt
src/avr/common/gpio/: CMakeLists.txt  avr_gpio.hpp
src/avr/common/gpio/ports/: CMakeLists.txt  avr_port_a.cpp  avr_port_a.hpp  avr_port_b.cpp  avr_port_b.hpp  avr_port_c.cpp  avr_port_c.hpp  avr_port_d.cpp  avr_port_d.hpp
src/avr/common/interfaces/: CMakeLists.txt  avr_i2c.cpp  avr_i2c.hpp  avr_usart.cpp  avr_usart.hpp
src/avr/common/time/: CMakeLists.txt  avr_sleep.cpp
src/avr/gpio/: CMakeLists.txt  avr_gpio.hpp
src/boards/stm32/stm32_black_pill/: gpio_config.hpp  pinout.hpp
src/boards/x86/simulator/: gpio_config.hpp  usart_config.hpp
src/common/: CMakeLists.txt
src/common/gpio/: CMakeLists.txt  digital_input_output_pin.cpp
src/common/timer/: CMakeLists.txt  timer_manager.cpp
src/common/utils/: CMakeLists.txt  usart_printer.hpp
src/interface/: config.hpp
src/interface/details/: utils.hpp
src/interface/hal/: configuration.hpp
src/interface/hal/core/: backupRegisters.hpp  core.hpp  criticalSection.hpp
src/interface/hal/gpio/: digitalOut.hpp  gpio.hpp
src/interface/hal/memory/: eeprom.hpp
src/interface/hal/time/: sleep.hpp  time.hpp  watchdog.hpp
src/x86/: CMakeLists.txt
src/x86/common/: CMakeLists.txt
src/x86/common/core/: CMakeLists.txt  x86_common_clock.cpp
src/x86/common/gpio/: x86_common_gpio.hpp
src/x86/common/interrupt/: CMakeLists.txt  x86_common_systick.cpp
src/x86/common/memory/: CMakeLists.txt  x86_common_eeprom.cpp  x86_common_flash.cpp
src/x86/common/time/: CMakeLists.txt  x86_common_sleep.cpp  x86_common_time.cpp
src/x86/common/usart/: CMakeLists.txt  x86_common_usart.hpp
src/x86/core/: backupRegisters_x86.cpp
src/x86/linux/: CMakeLists.txt
src/x86/linux/interfaces/: x86_mock_usart.cpp  x86_mock_usart.hpp
src/x86/memory/: eeprom_x86.cpp
src/x86/mock/: CMakeLists.txt
src/x86/mock/interfaces/: x86_mock_i2c.hpp  x86_mock_usart.hpp
src/x86/mock/time/: x86_mock_time.cpp
src/x86/simulator/: CMakeLists.txt
src/x86/simulator/detail/: tcp_server.hpp
src/x86/simulator/gpio/: x86_gpio.hpp
src/x86/simulator/time/: x86_sleep.cpp
src/x86/simulator/usart/: x86_simulator_usart.hpp  x86_usart.hpp
src/x86/time/: watchdog_x86.cpp
test/UT/: CMakeLists.txt
test/UT/common/timer/: TimerTests.cpp
test/st/: CMakeLists.txt  dummy_test.cpp  main.cpp
test/st/interrupt/: pendsv_tests.cpp  svc_tests.cpp  systick_tests.cpp  trigger_syscall.s
test/st/timer/: timer_tests.cpp
(+148 files in other folders)
